[gd_scene load_steps=4 format=3 uid="uid://bpljlrmexlwmm"]

[ext_resource type="Script" path="res://interface.gd" id="1_5jyxc"]
[ext_resource type="PackedScene" uid="uid://dmon8g7rvfxpq" path="res://Orbit.tscn" id="2_r48eh"]
[ext_resource type="PackedScene" uid="uid://cwftiepaxdrk0" path="res://Sateline.tscn" id="3_kplj0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("1_5jyxc")
orbit_scene = ExtResource("2_r48eh")
satellite_scene = ExtResource("3_kplj0")

[node name="VBoxContainer" type="GridContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.66
anchor_top = 0.387
anchor_right = 1.0
anchor_bottom = 0.642
offset_left = 7.67999
offset_top = -28.776
offset_bottom = 227.984
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
columns = 2

[node name="AddOrbitButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Создать 
орбиту"

[node name="AddSatelliteButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
text = "Добавить 
спутник"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="SemiMajorAxis" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Большая полуось"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Eccentricity" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Эксцентриситет"

[node name="LineEdit2" type="LineEdit" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Inclination" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Наклонение"

[node name="LineEdit3" type="LineEdit" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ArgumentOfPeriapsis" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Аргумент перицента"

[node name="LineEdit4" type="LineEdit" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="LongitudeOfAscendingNode" type="Label" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Долгота восходящего узла"

[node name="LineEdit5" type="LineEdit" parent="CanvasLayer/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="OrbitsList" type="ItemList" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="RemoveOrbitWithSatellitesButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Удалить
орбиту"

[node name="RemoveSatelliteButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Удалить 
спутник"

[node name="Popup" type="Popup" parent="CanvasLayer"]
